[package]
name = "jillc"
version = "0.1.0"
edition = "2021"

[dependencies]
chumsky = "0.9"
strum = { version = "0.26", features = ["derive"] }
strum_macros = { version = "0.26" }
heck = "0.5"
ariadne = "0.4"
phf = { version = "0.11", features = ["macros"] }


[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
module_name_repetitions = "allow"
future_not_send = "allow"
